# WBI-Toolbox

./: .gitignore  .startup_wbitoolbox.m.in  CMakeLists.txt  CONTRIBUTING.md  README.md  create_issue.sh  startup_wbitoolbox.m  startup_wbitoolbox.m.in
controllers/: COMPoseTesting.mdl  JacobiansTest.mdl  WBCLibrary.mdl  WBCLibrary.slx  compareCOPandFRI.mdl  computeFRI.mdl  computeFRI_fromSensors.mdl  macumbaCalibStandingBothFeet.sh  neckLinAngVel.mdl  test_senddq.mdl  yarpRead.mdl
controllers/Experiments/ForceTorqueSensors/: FTVsWBD_DoubleSupport.slx  FTVsWBD_SingleSupportLefttLeg.slx  FTVsWBD_SingleSupportRightLeg.slx  doubleSupportPlots.m
controllers/Experiments/ForceTorqueSensors/DATAdoubleSupportForce/: doubleSupportPlots.m
controllers/Experiments/ForceTorqueSensors/DATAsingleSupportLeftLeg/: doubleSupportPlots.m
controllers/Experiments/ForceTorqueSensors/DATAsingleSupportRightLeg/: doubleSupportPlots.m
controllers/balancing_with_opt_of_tau_and_QP_for_contact_wrenches/: balancingController_QP_oneFoot.slx
controllers/icubtwolink/: balancingController.mdl
controllers/tests/: COMPoseTesting.mdl  setAngles.mdl  yarpRead.mdl  yarpwrite.mdl
controllers/tests/singleTests/: paramFwdKin.slx  paramdJdq.mdl
controllers/torqueBalancing/: forceWithQP.mdl  neckVel.mdl
controllers/torqueBalancingV1/: controllerWithHandControl.slx  forceWithQP.mdl
controllers/torqueBalancingV2/: balancingController.mdl  balancingController.slx  balancingControllerWithHandControl.slx  balancingControllerWithNonLinearImpedances.slx  balancingController_QP.mdl  balancingWithNeitherTorqueMinimizationNorQP_constantTrajectoryOfCoM.mat  balancingWithNeitherTorqueMinimizationNorQP_leftAndRight_Ampl_1cm_Freq_01Hz.mat  balancingWithNeitherTorqueMinimizationNorQP_leftAndRight_Ampl_2cm_Freq_01Hz.mat  constraint_fcone_QP.m  controllerQP.m  controllerQPsolver.m  experiment_data_recording.mdl  initBalancingController.m  initBalancingControllerWithNonLinearImpedances.m  initBalancingController_QP.m
controllers/torqueBalancingV2.5/: balancingController_QP_twoFeet.mdl  controllerQPsolver.m  initBalancingController_QP_twoFeet.m
controllers/torqueBalancingV2/data/: balancing_left_right_test1.mat  balancing_left_right_test2.mat
controllers/torqueBalancingV3/: balancingController_QP_oneFoot.mdl  balancingController_QP_twoFeet.mdl  initBalancingController_QP_twoFeet.m
controllers/walking/playback/: Init.m  TrajectoryLoader.m  generateCppTrajectoryFiles.m  generateFilesForPlayerScript.m
controllers/walking/playback/tests/: WBCLibrary.mdl
controllers/wholeBodyImpedance/: impedanceControl.mdl  impedanceControlNewWBI.slx  impedanceControl_new_wbi_ID.mdl  init_new_wbi_ID.m
controllers/wholeBodyImpedence/: impedanceControl.mdl
libraries/: CMakeLists.txt  WBCLibrary.mdl  WBCLibrary.slx  slblocks.m  startup_wbitoolbox.m.in
libraries/cmake/: FindMatlab.cmake
libraries/minJerkGenerator/: CMakeLists.txt
libraries/minJerkGenerator/src/: minJerk.cpp
libraries/realTimeSynchronizer/: CMakeLists.txt  realTimeSynchronizer.cpp
libraries/softRealTime/: CMakeLists.txt
libraries/wbInterface/: CMakeLists.txt
libraries/wbInterface/conf/wbit/: iCubGenova01.ini  iCubGenova03.ini  icubGazeboSim.ini
libraries/wbInterface/conf/wbit/CMakeTmp/: iCubGenova01.ini.in  iCubGenova03.ini.in  iCubGenova03.ini.in~  icubGazeboSim.ini.in
libraries/wbInterface/conf/wholeBodyInterfaceToolbox/: wholeBodyInterfaceToolbox.ini
libraries/wbInterface/conf/wholeBodyInterfaceToolbox/CMakeTmp/: iCubDarmstadt01.ini.in  iCubGenova01.ini.in  iCubGenova03.ini.in  icubGazeboSim.ini.in
libraries/wbInterface/include/: SetPIDBlock.h  wbInterface.h
libraries/wbInterface/src/: SetPIDBlock.cpp  wbInterface.cpp
libraries/yRead/: CMakeLists.txt
libraries/yRead/src/: yarpRead.cpp
libraries/ySynchronizer/: CMakeLists.txt  ySynchronizer.cpp
libraries/yWrite/: CMakeLists.txt
libraries/yWrite/src/: yarpWrite.cpp
libraries/yarpRead/: CMakeLists.txt
libraries/yarpRead/src/: yarpRead.cpp
share/tools/: loadPopUpList.m  parseLinksNamesFromURDF.m
tools/VelAcc_Observer/: Observer.mdl
tools/ftSensorDebug/: ft_sensor_debug_iCubGenova03.mdl  ft_sensor_debug_iCubGenova03_sphere.mdl
tools/import_synchronized_yarp_logs/: import_synchronized_yarp_logs.m
